--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div id="obama-tweets"></div>
     <div id="trump-tweets"></div>
+    <div id="trump-tweets-sentiments"></div>
     <script src="./public/main.js"></script>
     <script src="./public/obama_tweets.js"></script>
     <script src="./public/trump_tweets.js"></script>
+    <script src="./public/trump_sentiments.js"></script>
+    
 
 </body>
 
