added Obama tweets

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="./public/twitter.css">
     <link rel="stylesheet" href="./public/main.css">
 
@@ -88,7 +89,7 @@
                 <h4>
                     Top Tweets that have High sentiment scores
                 </h4>
-                <div id="twitterTrumpFadeHigh" class="carousel slide carousel-fade tweet-fake" data-bs-ride="carousel">
+                <div id="twitterTrumpFadeHigh" class="carousel slide tweet-fake" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
@@ -98,7 +99,8 @@
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> March 2017
                                         </span>
-                                        <p>ObamaCare will explode and we will all get together and piece together a great healthcare plan for THE PEOPLE. Do not worry!</p>
+                                        <p>ObamaCare will explode and we will all get together and piece together a
+                                            great healthcare plan for THE PEOPLE. Do not worry!</p>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +114,8 @@
                                         Donald J. Trump <span>@realDonaldTrump</span><span> March 2017
                                         </span>
                                         <p>Great op-ed from
-                                            <span class="tweet-tag"> @RepKenBuck</span>. Looks like some in the Freedom Caucus are helping me end <span class="tweet-tag"> #Obamacare.</span></p>
+                                            <span class="tweet-tag"> @RepKenBuck</span>. Looks like some in the Freedom
+                                            Caucus are helping me end <span class="tweet-tag"> #Obamacare.</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -123,9 +126,12 @@
                                 <div class="tweet-header">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
-                                        Donald J. Trump <span>@realDonaldTrump</span><span> March 2017
+                                        Donald J. Trump <span>@realDonaldTrump</span><span> May 2017
                                         </span>
-                                        <p>"It was a GREAT day for the United States of America! This is a great plan that is a repeal & replace of ObamaCare.... <a href="https://t.co/0TnmLn55Lm" class="tweet-tag"> https://t.co/0TnmLn55Lm</a>
+                                        <p>"It was a GREAT day for the United States of America! This is a great plan
+                                            that is a repeal & replace of ObamaCare.... <a
+                                                href="https://t.co/0TnmLn55Lm" class="tweet-tag">
+                                                https://t.co/0TnmLn55Lm</a>
                                         </p>
                                     </div>
                                 </div>
@@ -150,7 +156,7 @@
                 <h4>
                     Top Tweets that have Low sentiment scores
                 </h4>
-                <div id="twitterTrumpFadeLow" class="carousel slide carousel-fade tweet-fake" data-bs-ride="carousel">
+                <div id="twitterTrumpFadeLow" class="carousel slide tweet-fake" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
@@ -160,7 +166,10 @@
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> April 2020
                                         </span>
-                                        <p>Biden/Obama were a disaster in handling the H1N1 Swine Flu. Polling at the time showed disastrous approval numbers. 17,000 people died unnecessarily and through incompetence! Also, don’t forget their 5 Billion Dollar Obamacare website that should have cost close to nothing!</p>
+                                        <p>Biden/Obama were a disaster in handling the H1N1 Swine Flu. Polling at the
+                                            time showed disastrous approval numbers. 17,000 people died unnecessarily
+                                            and through incompetence! Also, don’t forget their 5 Billion Dollar
+                                            Obamacare website that should have cost close to nothing!</p>
                                     </div>
                                 </div>
                             </div>
@@ -173,7 +182,7 @@
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> April 2017
                                         </span>
-                                        <p>Democrats are trying to bail out insurance companies from disastrous 
+                                        <p>Democrats are trying to bail out insurance companies from disastrous
                                             <span> #ObamaCare</span>, and Puerto Rico with your tax dollars. Sad!</p>
                                     </div>
                                 </div>
@@ -187,7 +196,8 @@
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> January 2017
                                         </span>
-                                        <p>People must remember that ObamaCare just doesn't work, and it is not affordable - 116% increases (Arizona). Bill Clinton called it ""CRAZY""
+                                        <p>People must remember that ObamaCare just doesn't work, and it is not
+                                            affordable - 116% increases (Arizona). Bill Clinton called it ""CRAZY""
                                         </p>
                                     </div>
                                 </div>
@@ -243,7 +253,8 @@
                         <div class="tweet-header-info">
                             Donald J. Trump <span>@realDonaldTrump</span><span> June 2020
                             </span>
-                            <p>....Obamacare is a joke! Deductible is far too high and the overall cost is ridiculous. My
+                            <p>....Obamacare is a joke! Deductible is far too high and the overall cost is ridiculous.
+                                My
                                 Administration has gone out of its way to manage OC much better than previous, but it is
                                 still no good. I will ALWAYS PROTECT PEOPLE WITH PRE-EXISTING CONDITIONS, ALWAYS,
                                 ALWAYS,ALWAYS!!!</p>
@@ -253,9 +264,79 @@
             </div>
         </div>
         
+        <!-- 
+            Why was Obamacare created?
+         -->
         <div class="my-5">
-            
+            <h1>
+                Why was Obamacare created?
+            </h1>
+            <div id="twitterObamaTweets" class="carousel slide tweet-fake" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <blockquote class="twitter-tweet d-block">
+                            <p lang="en" dir="ltr">&quot;It&#39;s the end of discrimination against the sick in
+                                America.&quot; —President Obama on how we&#39;re <a
+                                    href="https://twitter.com/hashtag/BetterWithObamacare?src=hash&amp;ref_src=twsrc%5Etfw">#BetterWithObamacare</a>.
+                                <a href="http://t.co/6um94lVVqj">http://t.co/6um94lVVqj</a></p>&mdash; Barack Obama
+                            (@BarackObama) <a
+                                href="https://twitter.com/BarackObama/status/580791922089832448?ref_src=twsrc%5Etfw">March
+                                25, 2015</a>
+                        </blockquote>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <img src="..." class="d-block w-100" alt="..."> -->
+                        <blockquote class="twitter-tweet d-block">
+                            <p lang="en" dir="ltr">Good news: The number of uninsured children in America is on the
+                                decline. Read more: <a href="http://t.co/hqQIu4jFj8">http://t.co/hqQIu4jFj8</a> <a
+                                    href="https://twitter.com/hashtag/Obamacare?src=hash&amp;ref_src=twsrc%5Etfw">#Obamacare</a>
+                            </p>&mdash; Barack Obama (@BarackObama) <a
+                                href="https://twitter.com/BarackObama/status/403559780930703360?ref_src=twsrc%5Etfw">November
+                                21, 2013</a>
+                        </blockquote>
+                    </div>
+                    <div class="carousel-item">
+                        <!-- <img src="..." class="d-block w-100" alt="..."> -->
+                        <blockquote class="twitter-tweet d-block">
+                            <p lang="en" dir="ltr">&quot;In the wealthiest nation on earth, no one should go broke just
+                                because they get sick.&quot; —President Obama <a
+                                    href="https://twitter.com/hashtag/Obamacare?src=hash&amp;ref_src=twsrc%5Etfw">#Obamacare</a>
+                            </p>&mdash; Barack Obama (@BarackObama) <a
+                                href="https://twitter.com/BarackObama/status/383244991625056256?ref_src=twsrc%5Etfw">September
+                                26, 2013</a>
+                        </blockquote>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#twitterObamaTweets"
+                    data-bs-slide="prev">
+                    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+                    <i class="fas fa-angle-left fs-1 tweet-tag"></i>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#twitterObamaTweets"
+                    data-bs-slide="next">
+                    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+                    <i class="fas fa-angle-right fs-1 tweet-tag"></i>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+            <p class="fs-5 mt-4">
+                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
+                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
+                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
+            </p>
+
+            <p class="fs-5 mt-4">
+                The ACA scheme, also known as the Affordable Care Act or Obamacare, required everyone to either have
+                health insurance or pay a tax. This scheme aimed to provide steady medical supports to millions of
+                people, especially those with pre-existing conditions by encouraging young and healthy people to get
+                their own insurance.
+            </p>
         </div>
+
+
     </div>
 
     <!-- <div id="obama-tweets"></div>
@@ -272,6 +353,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 </html>
