added new sections

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h1>
                 The conflict between Trump and Obamacare
             </h1>
-            <p class="fs-5 mt-4">
+            <p class="fs-5 my-4">
                 Ever since Trump became the president of USA in 2017, he has been working towards repealing Obamacare
                 and
                 the Affordable Care Act once and for all. One of many reasons that he is putting so much efforts to
@@ -80,7 +80,7 @@
                     Donald Trump
                 </figcaption>
             </figure>
-            <p class="fs-5 mt-4">
+            <p class="fs-5 my-4">
                 According to Trump's tweets between 2017 and and 2020, it is evident that he was very vocal about
                 demolishing the act. However, not many medias or people supported his views and decisions, specially in
                 2020, where the pandemic began (Dorning, M., Dennis, T. S., (2020, June)).
@@ -220,11 +220,11 @@
             </div>
 
             <div class="row">
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-8">
                     <div id="trump-tweets-sentiments-pie"></div>
                 </div>
-                <div class="col-12 col-md-4">
-                    <p class="fs-5 mt-4">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <p class="fs-5 my-4">
                         According to sentiment scores of Trump's Tweets, it shows that his voice about Obamacare is
                         entirely negative. The tweets that have higher sentiment seem to focus on his achievements on
                         repealing Obamacare, whereas the others emphasize on how costly Obamacare was to Americans.
@@ -240,7 +240,7 @@
                     Trump spokesman, Judd Deere
                 </figcaption>
             </figure>
-            <p class="fs-5 mt-4">
+            <p class="fs-5 my-4">
                 One of the vows that Trump had publicly made on his presidency was to replace the ACA with better
                 alternatives. However, the White House and Republican lawmakers have not yet introduce any detailed
                 plan.
@@ -263,7 +263,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- 
             Why was Obamacare created?
          -->
@@ -271,7 +271,12 @@
             <h1>
                 Why was Obamacare created?
             </h1>
-            <div id="twitterObamaTweets" class="carousel slide tweet-fake" data-bs-ride="carousel">
+            <p class="fs-5 my-4">
+                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
+                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
+                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
+            </p>
+            <div id="twitterObamaTweets" class="carousel slide tweet-fake my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <blockquote class="twitter-tweet d-block">
@@ -321,14 +326,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
-            <p class="fs-5 mt-4">
-                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
-                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
-                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
-            </p>
-
-            <p class="fs-5 mt-4">
+            <p class="fs-5 my-4">
                 The ACA scheme, also known as the Affordable Care Act or Obamacare, required everyone to either have
                 health insurance or pay a tax. This scheme aimed to provide steady medical supports to millions of
                 people, especially those with pre-existing conditions by encouraging young and healthy people to get
@@ -336,7 +334,30 @@
             </p>
         </div>
 
-
+        <div class="my-5">
+            <h1>
+                How did Obamacare help poor people to afford health coverage?
+            </h1>
+            <p class="fs-5 my-4">
+                Until the ACA, only half of poor people were supported by Medicaid and almost 30% of those under the age of 65 with low-income did not have any coverage at all. After the ACA, the number of Americans lacking health insurance went from more than 48 million in 2010 to 28 million.
+            </p>
+            <p class="fs-5 my-4">
+                By getting more people to buy insurance through the ACA, it allowed more people to afford the medical care they need. Not only that the ACA keeps the price lower for everyone, but it also forbids the insurers to limit their prices for those with a history of illness (Rice, T. (2018)).
+            </p>
+            <p class="fs-5 my-4">
+                The ACA increased individual coverage by:
+            </p>
+            <ol>
+                <li>
+                    Prohibiting insurers from denying insurance or charging more for those with pre-existing conditions.
+                </li>
+                <li>Madating everyone to get insurance</li>
+                <li>Helping everyone to pay for their own insurance through income-based premium.</li>
+            </ol>
+            <p class="fs-3 fst-italic fw-light text-center my-4">
+                To date, it has provided coverage for more than 94% of Americans! 
+            </p>
+        </div>
     </div>
 
     <!-- <div id="obama-tweets"></div>
