added full narrative

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h4>
                     Top Tweets that have High sentiment scores
                 </h4>
-                <div id="twitterTrumpFadeHigh" class="carousel slide tweet-fake" data-bs-ride="carousel">
+                <div id="twitterTrumpFadeHigh" class="tweet-slides carousel slide tweet-fake" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
@@ -156,7 +156,7 @@
                 <h4>
                     Top Tweets that have Low sentiment scores
                 </h4>
-                <div id="twitterTrumpFadeLow" class="carousel slide tweet-fake" data-bs-ride="carousel">
+                <div id="twitterTrumpFadeLow" class="tweet-slides carousel slide tweet-fake" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
@@ -276,7 +276,7 @@
                 bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
                 threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
             </p>
-            <div id="twitterObamaTweets" class="carousel slide tweet-fake my-5" data-bs-ride="carousel">
+            <div id="twitterObamaTweets" class="tweet-slides carousel slide tweet-fake my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <blockquote class="twitter-tweet d-block">
@@ -333,21 +333,27 @@
                 their own insurance.
             </p>
         </div>
-
+        <!-- 
+            How did Obamacare help poor people to afford health coverage?
+         -->
         <div class="my-5">
             <h1>
                 How did Obamacare help poor people to afford health coverage?
             </h1>
             <p class="fs-5 my-4">
-                Until the ACA, only half of poor people were supported by Medicaid and almost 30% of those under the age of 65 with low-income did not have any coverage at all. After the ACA, the number of Americans lacking health insurance went from more than 48 million in 2010 to 28 million.
+                Until the ACA, only half of poor people were supported by Medicaid and almost 30% of those under the age
+                of 65 with low-income did not have any coverage at all. After the ACA, the number of Americans lacking
+                health insurance went from more than 48 million in 2010 to 28 million.
             </p>
             <p class="fs-5 my-4">
-                By getting more people to buy insurance through the ACA, it allowed more people to afford the medical care they need. Not only that the ACA keeps the price lower for everyone, but it also forbids the insurers to limit their prices for those with a history of illness (Rice, T. (2018)).
+                By getting more people to buy insurance through the ACA, it allowed more people to afford the medical
+                care they need. Not only that the ACA keeps the price lower for everyone, but it also forbids the
+                insurers to limit their prices for those with a history of illness (Rice, T. (2018)).
             </p>
             <p class="fs-5 my-4">
                 The ACA increased individual coverage by:
             </p>
-            <ol>
+            <ol class="fst-italic fs-5 fw-light">
                 <li>
                     Prohibiting insurers from denying insurance or charging more for those with pre-existing conditions.
                 </li>
@@ -355,8 +361,79 @@
                 <li>Helping everyone to pay for their own insurance through income-based premium.</li>
             </ol>
             <p class="fs-3 fst-italic fw-light text-center my-4">
-                To date, it has provided coverage for more than 94% of Americans! 
+                To date, it has provided coverage for more than 94% of Americans!
             </p>
+        </div>
+        <!-- What did not work? -->
+        <div class="my-5">
+            <h1>
+                What did not work?
+            </h1>
+            <p class="fs-5 my-4">
+                The ACA was originally created so that all poor persons would receive Medicaid coverage, but that intent
+                was hindered by the U.S. Supreme Court ruling.
+            </p>
+            <p class="fs-5 my-4">
+                The ACA did not achieve its goal for several reasons:
+            </p>
+            <ol class="fst-italic fs-5 fw-light">
+                <li>
+                    Approximately 4.5 million of poor and near-poor people still do not receive Medicaid because most of
+                    them would need to spend more than 8% of their income on premiums.
+                </li>
+                <li>Some preferred to pay penalty than buying insurance because the penalty is milder than in Germany,
+                    Netherlands and Switzerland.</li>
+                <li>Undocumented individuals are forbidden from purchasing on the exchanges and are not eligible for
+                    subsidies.</li>
+            </ol>
+        </div>
+
+        <!-- Why does Trump hate Obamacare so much? -->
+        <div class="my-5">
+            <h1>Why does Trump hate Obamacare so much?</h1>
+            <figure class="text-center">
+                <blockquote class="blockquote fs-4 lead">
+                    <p>Obamacare is one of the most visible symbols of Obama’s presidency</p>
+                </blockquote>
+                <figcaption class="blockquote-footer fs-5">
+                    (Stein, H. F., & Allcorn, S. (2018))
+                </figcaption>
+            </figure>
+            <p class="fs-5 my-4">
+                Although Obamacare has been well received by most Americans, Trump, however, is strongly against it.
+                According to Stein, H. F., and Allcorn, S. (2018), it is believed that the root of hatred for Obama and
+                Obamacare was originated from The annual Washington Post gala White House Correspondents’ Dinner on
+                April 30, 2011, where Obama publicly "roasted" Trump.
+            </p>
+
+            <iframe class="vid-frame" src="https://www.youtube.com/embed/HHckZCxdRkA" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+
+
+            <p class="fs-5 my-4">
+                Trump, who is easily ashamed, swore to destroy Obama and everything Obama did.
+            </p>
+            <p class="fs-5 my-4">
+                It is believed that after the incident at The annual Washington Post gala White House Correspondents’
+                Dinner, Trump became the most visible spokesperson for the "birther movement", which was believed to be
+                an effort to delegitimize Obama as President.
+            </p>
+        </div>
+        <!-- What would happen if Trump were to repeal Obamacare? -->
+        <div class="my-5">
+            <h1>What would happen if Trump were to repeal Obamacare?</h1>
+            <p class="fs-5 my-4">If Obamacare were to be repealed, at least 12.3 million Americans would lose their insurance because it is not mandatory anymore. This would cause an increase of 8% in market premiums in 2017 and even more today, especially during the pandemic. The increase of premiums would then cause significant coverage losses to many other Americans.</p>
+            <p class="fs-5 my-4">In short, by demolishing the ACA, millions of people would be "kicked" out of insurance. Losing insurance would mean losing health benefits and getting much higher medical costs.</p>
+            <p class="fs-5 my-4">The ACA, or Obamacare, has become so popular today than it was when it first passed in 2010. Yet, neither the Republicans nor Trump have proposed any alternative without ensuring the same protection for the people.</p>
+        </div>
+        <!-- Conclusion-->
+        <div class="my-5">
+            <h1>Conclusion</h1>
+            <p class="fs-5 my-4">In conclusion, the ACA has helped not only providing subsidies to almost all Americans, but also slowing down the rise in medical costs. However, it can be viewed negatively by the fact that it mandates everyone to get their own insurance. This is also one of the reasons, besides the hatred for Obama, that Trump is so opposed to this Act.</p>
+            <p class="fs-5 my-4">Up until this date, Trump's effort to repeal Obamacare is still an ongoing process. Neither him nor his Republican party has yet to offer any alternative that could maintain the same coverage as Obamacare did for the Americans. This is very crucial because the need for insurance and medical coverage is highly important in 2020 and 2021, during the pandemic.</p>
         </div>
     </div>
 
