--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./public/twitter.css">
     <link rel="stylesheet" href="./public/main.css">
 
-    <title>Tcscsc</title>
+    <title>Trump's attempt to repeal Obamacare and how Obamacare was established</title>
 </head>
 
 <body>
@@ -43,8 +43,8 @@
     </div>
     <!-- MAIN CONTENT -->
     <div class="container mt-5">
-        <h1 class="display-2">
-            The conflict between Trump and Obamacare
+        <h1 class="display-2 my-4">
+            Trump's attempt to repeal Obamacare and how Obamacare was established
         </h1>
         <p class="lead italic fs-4">
             Obamacare was signed by Obama on March 23, 2010. It has provided almost all Americans, especially those who
@@ -86,7 +86,7 @@
                 2020, where the pandemic began (Dorning, M., Dennis, T. S., (2020, June)).
             </p>
             <div class="my-5">
-                <h4>
+                <h4 class="text-center lead fs-3">
                     Top Tweets that have High sentiment scores
                 </h4>
                 <div id="twitterTrumpFadeHigh" class="tweet-slides carousel slide tweet-fake" data-bs-ride="carousel">
@@ -94,7 +94,7 @@
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> March 2017
@@ -108,7 +108,7 @@
                         <div class="carousel-item">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> March 2017
@@ -123,7 +123,7 @@
                         <div class="carousel-item">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> May 2017
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="my-5">
-                <h4>
+                <h4 class="text-center lead fs-3">
                     Top Tweets that have Low sentiment scores
                 </h4>
                 <div id="twitterTrumpFadeLow" class="tweet-slides carousel slide tweet-fake" data-bs-ride="carousel">
@@ -161,7 +161,7 @@
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> April 2020
@@ -177,7 +177,7 @@
                         <div class="carousel-item">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> April 2017
@@ -191,7 +191,7 @@
                         <div class="carousel-item">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <div class="tweet-wrap d-block">
-                                <div class="tweet-header">
+                                <div class="tweet-header fs-6">
                                     <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                                     <div class="tweet-header-info">
                                         Donald J. Trump <span>@realDonaldTrump</span><span> January 2017
@@ -248,7 +248,7 @@
 
             <div class="tweet-fake">
                 <div class="tweet-wrap">
-                    <div class="tweet-header">
+                    <div class="tweet-header fs-6">
                         <img src="./src/realdonald.jpg" alt="" class="avator tweet-fake-img">
                         <div class="tweet-header-info">
                             Donald J. Trump <span>@realDonaldTrump</span><span> June 2020
@@ -271,11 +271,7 @@
             <h1>
                 Why was Obamacare created?
             </h1>
-            <p class="fs-5 my-4">
-                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
-                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
-                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
-            </p>
+            
             <div id="twitterObamaTweets" class="tweet-slides carousel slide tweet-fake my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -327,11 +323,35 @@
                 </button>
             </div>
             <p class="fs-5 my-4">
+                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
+                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
+                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
+            </p>
+            <p class="fs-5 my-4">
                 The ACA scheme, also known as the Affordable Care Act or Obamacare, required everyone to either have
                 health insurance or pay a tax. This scheme aimed to provide steady medical supports to millions of
                 people, especially those with pre-existing conditions by encouraging young and healthy people to get
                 their own insurance.
             </p>
+            
+            <div class="row">
+                <div id="obama-tweets-sentiments" class="col-12 col-sm-6"></div>
+                <div class="col-12 col-sm-6" id="obama-tweets-sentiments-pie"></div>
+            </div>
+            <p class="fs-5 my-4">
+                According to the sentiment scores of Obama's tweets on Obamacare, it appears that he'd written more negative sentimental tweets than positive. Those that are positive often expressed how successful Obamacare was to Americans, whereas the latter emphasized on how many couldn't afford the care they need.
+            </p>
+            <p class="fs-5 my-4">
+                This shows that Obama had put a lot thoughts and considerations when designing this scheme, and that he's working hard to ensure everyone gets the medical support they need.
+            </p>
+            <figure class="text-center">
+                <blockquote class="blockquote fs-4 lead">
+                    <p>"It’s not perfect, of course, and it still leaves many people in need out in the cold. But it’s a start, and for me it’s been a lifesaver — perhaps literally."</p>
+                </blockquote>
+                <figcaption class="blockquote-footer fs-5">
+                    Spike Dolomite Ward, a woman in the San Fernando Valley who diagnosed with breast cancer <a href="https://www.latimes.com/opinion/la-xpm-2011-dec-06-la-oe-ward-in-praise-of-obamacare-20111206-story.html"><cite title="‘Obamacare’ to the rescue">‘Obamacare’ to the rescue</cite></a>
+                </figcaption>
+            </figure>
         </div>
         <!-- 
             How did Obamacare help poor people to afford health coverage?
@@ -340,15 +360,11 @@
             <h1>
                 How did Obamacare help poor people to afford health coverage?
             </h1>
+            <div id="uninsured-graph" class="w-75 mx-auto"></div>
             <p class="fs-5 my-4">
                 Until the ACA, only half of poor people were supported by Medicaid and almost 30% of those under the age
-                of 65 with low-income did not have any coverage at all. After the ACA, the number of Americans lacking
-                health insurance went from more than 48 million in 2010 to 28 million.
-            </p>
-            <p class="fs-5 my-4">
-                By getting more people to buy insurance through the ACA, it allowed more people to afford the medical
-                care they need. Not only that the ACA keeps the price lower for everyone, but it also forbids the
-                insurers to limit their prices for those with a history of illness (Rice, T. (2018)).
+                of 65 with low-income did not have any coverage at all (Rice, T., Unruh, L. Y., van Ginneken, E., Rosenau, P., & Barnes, A. J. (2018)). After the ACA, the number of Americans lacking
+                health insurance went from more than 46.5 million in 2010 to 18.9 million in 2019 .
             </p>
             <p class="fs-5 my-4">
                 The ACA increased individual coverage by:
@@ -361,8 +377,9 @@
                 <li>Helping everyone to pay for their own insurance through income-based premium.</li>
             </ol>
             <p class="fs-3 fst-italic fw-light text-center my-4">
-                To date, it has provided coverage for more than 94% of Americans!
+                To date, it has provided coverage for more than 31 Million Americans!
             </p>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">31 Million Now Covered Through <a href="https://twitter.com/hashtag/Obamacare?src=hash&amp;ref_src=twsrc%5Etfw">#Obamacare</a>, Highest Figure Ever<a href="https://twitter.com/hashtag/healthcare?src=hash&amp;ref_src=twsrc%5Etfw">#healthcare</a><a href="https://t.co/CcTPiMn6ZS">https://t.co/CcTPiMn6ZS</a></p>&mdash; Healthcare Education Project (@HealthEdProject) <a href="https://twitter.com/HealthEdProject/status/1401932978113191947?ref_src=twsrc%5Etfw">June 7, 2021</a></blockquote>
         </div>
         <!-- What did not work? -->
         <div class="my-5">
@@ -381,7 +398,7 @@
                     Approximately 4.5 million of poor and near-poor people still do not receive Medicaid because most of
                     them would need to spend more than 8% of their income on premiums.
                 </li>
-                <li>Some preferred to pay penalty than buying insurance because the penalty is milder than in Germany,
+                <li>Some preferred to pay penalty than buying insurance because the penalty is milder compared to Germany,
                     Netherlands and Switzerland.</li>
                 <li>Undocumented individuals are forbidden from purchasing on the exchanges and are not eligible for
                     subsidies.</li>
@@ -425,7 +442,7 @@
         <!-- What would happen if Trump were to repeal Obamacare? -->
         <div class="my-5">
             <h1>What would happen if Trump were to repeal Obamacare?</h1>
-            <p class="fs-5 my-4">If Obamacare were to be repealed, at least 12.3 million Americans would lose their insurance because it is not mandatory anymore. This would cause an increase of 8% in market premiums in 2017 and even more today, especially during the pandemic. The increase of premiums would then cause significant coverage losses to many other Americans.</p>
+            <p class="fs-5 my-4">If Obamacare were to be repealed, at least 12.3 million Americans would lose their insurance because it is not mandatory anymore (Saltzman, E., & Eibner, C. (2015)). This would cause an increase of 8% in market premiums in 2017 and even more today, especially during the pandemic. The increase of premiums would then cause significant coverage losses to many other Americans.</p>
             <p class="fs-5 my-4">In short, by demolishing the ACA, millions of people would be "kicked" out of insurance. Losing insurance would mean losing health benefits and getting much higher medical costs.</p>
             <p class="fs-5 my-4">The ACA, or Obamacare, has become so popular today than it was when it first passed in 2010. Yet, neither the Republicans nor Trump have proposed any alternative without ensuring the same protection for the people.</p>
         </div>
@@ -447,7 +464,9 @@
     <script src="./public/trump_tweets.js"></script>
     <script src="./public/trump_sentiments.js"></script>
     <script src="./public/trump_sentiments_pie.js"></script>
-
+    <script src="./public/obama_sentiments_avg.js"></script>
+    <script src="./public/obama_sentiments_pie.js"></script>
+     <script src="./public/uninsured_nonelderly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
