--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <h1>
                 The conflict between Trump and Obamacare
             </h1>
+            <div id="trump-tweets"></div>
+
             <p class="fs-5 my-4">
-                Ever since Trump became the president of USA in 2017, he has been working towards repealing Obamacare
-                and
-                the Affordable Care Act once and for all. One of many reasons that he is putting so much efforts to
+                Ever since Trump became the president of USA in 2017, he has been working towards repealing Obamacare (a.k.a: Affordable Care Act) once and for all. One of many reasons that he is putting so much efforts to
                 repeal
-                these acts is that the ACA has made it compulsory for most Americans to purchase their own insurance. As
+                this Act is that the ACA has made it compulsory for most Americans to purchase their own insurance. As
                 a
                 result of the ACA, most Americans would have to limit their weekly incomes just to pay for Medicare
                 premiums.
@@ -271,7 +271,13 @@
             <h1>
                 Why was Obamacare created?
             </h1>
+            <div id="obama-tweets"></div>
             
+            <p class="fs-5 my-4">
+                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
+                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
+                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
+            </p>
             <div id="twitterObamaTweets" class="tweet-slides carousel slide tweet-fake my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -322,11 +328,6 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <p class="fs-5 my-4">
-                Before the ACA in 2010, Health care costs were among one of the most common reasons many claimed for
-                bankruptcy, even for those with insurance. The economy where healthcare was among many factors that
-                threatened to eat the budget alive was why Obama decided to establish the ACA scheme.
-            </p>
             <p class="fs-5 my-4">
                 The ACA scheme, also known as the Affordable Care Act or Obamacare, required everyone to either have
                 health insurance or pay a tax. This scheme aimed to provide steady medical supports to millions of
@@ -454,8 +455,8 @@
         </div>
     </div>
 
-    <!-- <div id="obama-tweets"></div>
-    <div id="trump-tweets"></div>
+    <!-- 
+    
     <div id="trump-tweets-sentiments"></div>
      -->
 
